--- a/css/main.css
+++ b/css/main.css
@@ -424,8 +424,7 @@ img::-moz-selection {
   }
 
   hr {
-    border: none;
-  background-color: #ed7b1d}
+    border: none;}
 
   .section-title__divider {
     width: 30%;
@@ -862,7 +861,6 @@ img::-moz-selection {
     color: #000000; 
     background-color: #FAFAFA;
   }
-
 
 .post-list__meta {
   display: block;
